api-gateway and verification and authorization added